# orchestrator_toolkit

./: .gitignore  .pypirc.template  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLE_USAGE.md  LICENSE  Makefile  PACKAGE_SUMMARY.md  PHASE1_MIGRATION_SUMMARY.md  PYPI_UPLOAD_GUIDE.md  README.md  architecture_design.md  migration_analysis.json  pyproject.toml  requirements.txt  run_log.md  setup.bat  setup.sh  test_installation.sh
.claude/: claude.md  mcp.json  mcp.json.bak.20251013-133219
.claude/agents/: intake-scribe.md  scout.md  session-summarizer.md  shadcn-frontend-architect.md  shadcn-ui-expert.md  spec_author.md
.claude/commands/: exec.sh  new-plan.sh  new-task.sh  otk.sh  plan.sh  spec.sh  summarize-plan.sh
.claude/hooks/: post_to_statusline.sh
.claude/templates/: plan.md  spec.md  task.md
docs/: PHASE_6_7_MIGRATION.md
examples/: sample_plan.md  sample_task.md  workflow.md
scripts/: cleanup_mcp_zombies.sh  log_action.py  migrate_docs_folder.py  rollback_folder_migration.py  smoke_tax.sh
src/orchestrator_toolkit/: __init__.py  archon_adapter.py  cli.py  cli_new.py  hooks.py  id_alloc.py  ids.py  index_manager.py  mem0_wrapper.py  orchestrator.py  owner.py  phrase_router.py  scout.py  settings.py  slug.py  uli.py  utils.py
src/orchestrator_toolkit/models/: __init__.py  identifiers.py  migration.py
src/orchestrator_toolkit/scripts/: __init__.py  plan_new.py  task_new.py
tests/: test_cli_new.py  test_gates.py  test_golden_router.py  test_hooks.py  test_ids.py  test_orchestrator_integration.py  test_owner.py  test_phrase_router.py  test_toggle.py  test_uli_slug.py
