[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator-toolkit"
version = "2.1.0"
description = "Lightweight task orchestration system for managing project workflows"
requires-python = ">=3.10"
authors = [
    {name = "Arkai Growth", email = "dev@arkaigrowth.com"}
]
maintainers = [
    {name = "Alex Kamysz", email = "alex@arkaigrowth.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "task-management",
    "orchestration",
    "workflow",
    "claude-code",
    "project-management",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities"
]

dependencies = [
    "pydantic-settings>=2.3,<3",
    "ulid-py>=1.1,<2",
    "filelock>=3.0,<4",
]

[project.urls]
Homepage = "https://github.com/arkaigrowth/orchestrator_toolkit_1.0"
Documentation = "https://github.com/arkaigrowth/orchestrator_toolkit_1.0#readme"
Repository = "https://github.com/arkaigrowth/orchestrator_toolkit_1.0"
Issues = "https://github.com/arkaigrowth/orchestrator_toolkit_1.0/issues"

[project.scripts]
# New unified CLI commands
otk = "orchestrator_toolkit.cli:main"
otk-new = "orchestrator_toolkit.cli_new:main"
otk-plan-new = "orchestrator_toolkit.cli_new:plan_new_direct"
otk-spec-new = "orchestrator_toolkit.cli_new:spec_new_direct"
otk-exec = "orchestrator_toolkit.cli_new:exec_direct"

# Primary entry points using Python scripts
otk-task-new = "orchestrator_toolkit.scripts.task_new:main"
orchestrator-once = "orchestrator_toolkit.cli:orchestrator_once"

# Backward compatibility aliases
task-new = "orchestrator_toolkit.scripts.task_new:main"
plan-new = "orchestrator_toolkit.scripts.plan_new:main"
plan-summarize = "orchestrator_toolkit.cli:plan_summarize"
# Note: orchestrator-watch commented out until fully implemented
# orchestrator-watch = "orchestrator_toolkit.cli:orchestrator_watch"
